Fixed nav bar button not working well on small screens

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ body{
     background-color: #4e150d;
     margin-left: 5px;
     margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     border-radius: 5px;
 }
 
